update for gh-pages

--- a/src/components/i18n/he.json
+++ b/src/components/i18n/he.json
@@ -1,7 +1,5 @@
 {
-    "popUpPage": {
-        "modalTitle": "הזמנתך בוצעה בהצלחה!"
-    },
+    
     "homePage": {
         "title": "דף הבית",
         "up": "למעלה",
@@ -239,5 +237,16 @@
     "addComment":"הוסף הערות נוספות למעצב ",
     "comments" : "הערות "
 
-   }
+   },
+    "confirmationPage": {
+      "title": "תודה על הפנייה!",
+      "message": "לפני שתשלים את ההזמנה, אנו רוצים ליידע אותך כי תוך שני ימי עסקים מהיום, הגרפיקאית שלנו תיצור איתך קשר כדי לעזור לך לבחור את אמצעי התשלום הנוח ביותר עבורך ולדון בפרטי ההזמנה.",
+      "footer": "אנו שמחים על הבחירה שלך בנו ומתחייבים להעניק לך שירות מקצועי ומותאם אישית. אם יש לך שאלות נוספות או בקשות מיוחדות, אל תהסס לפנות אלינו.\nתודה רבה על ההזמנה שלך! מצפים לעבוד יחד ולהגשים את הרצונות שלך."
+  },
+    "popUpPage": {
+      "modalTitle": "ההזמנה בוצעה בהצלחה!",
+      "thankYouMessage": "תודה על רכישתך!",
+      "orderCompleteDescription": "ההזמנה שלך הושלמה בהצלחה. נשלח לך אישור למייל שלך.",
+      "closeButton": "סגור"
+    }
 }
